Fix “Momentum Scrolling on iOS Overflow Elements”

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -839,6 +839,7 @@ body main.page.location {
     position: relative;
     z-index: 1;
     overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
   }
 }
 body main.page.location div.page_content {
@@ -846,6 +847,7 @@ body main.page.location div.page_content {
   background: #F7F7F7;
   box-shadow: 10px 0px 30px 0px rgba(0, 0, 0, 0.1);
   overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 @media (min-width: 768px) {
   body main.page.location div.page_content {
@@ -996,8 +998,9 @@ body main.page.services {
 }
 @media (min-width: 768px) {
   body main.page.services {
-    overflow-x: auto;
+    overflow-x: scroll;
     overflow-y: hidden;
+    -webkit-overflow-scrolling: touch;
   }
 }
 @media (max-width: 767px) {
@@ -1028,7 +1031,8 @@ body main.page.services div.service {
     -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column;
-    overflow: auto;
+    overflow: scroll;
+    -webkit-overflow-scrolling: touch;
   }
 }
 @media (max-width: 767px) {
@@ -1156,7 +1160,8 @@ body main.page.services div.description h2 + h2 {
 }
 
 body main.page.contact {
-  overflow: auto;
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 body main.page.contact div.page_content {
   padding: 30px 40px;
@@ -1353,7 +1358,8 @@ body main.page.contact button:disabled {
 }
 
 body main.page.about {
-  overflow: auto;
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 body main.page.about div.page_content {
   padding: 30px 40px;
@@ -1435,7 +1441,8 @@ body main.page.about section.references li.reference.rhone {
 }
 
 body main.page.legal {
-  overflow: auto;
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 body main.page.legal div.page_content {
   padding: 30px 40px;
