--- a/src/styles/about/about.scss
+++ b/src/styles/about/about.scss
@@ -1,5 +1,6 @@
 body main.page.about {
-  overflow: auto;
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
 
   div.page_content {
     padding: 30px 40px;
