--- a/src/styles/locations/_layout.scss
+++ b/src/styles/locations/_layout.scss
@@ -9,6 +9,7 @@ body main.page.location {
     position: relative;
     z-index: 1;
     overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
   }
 
   div.page_content {
@@ -16,6 +17,7 @@ body main.page.location {
     background: $color_gray_lighter;
     box-shadow: 10px 0px 30px 0px rgba(black, 0.1);
     overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
 
     @media (min-width: 768px) {
       flex-basis: 60%;
