--- a/src/styles/services/_services.scss
+++ b/src/styles/services/_services.scss
@@ -3,8 +3,9 @@ body main.page.services {
   flex-wrap: nowrap;
 
   @media (min-width: 768px) {
-    overflow-x: auto;
+    overflow-x: scroll;
     overflow-y: hidden;
+    -webkit-overflow-scrolling: touch;
   }
 
   @media (max-width: 767px) {
@@ -23,7 +24,8 @@ body main.page.services {
     @media (min-width: 768px) {
       display: flex;
       flex-direction: column;
-      overflow: auto;
+      overflow: scroll;
+      -webkit-overflow-scrolling: touch;
     }
 
     @media (max-width: 767px) {
